# invariant-reference

./: Cargo.toml  README.md
crates/invariant_reference_derive/: Cargo.toml
crates/invariant_reference_derive/src/: lib.rs
examples/: simple.rs
src/: lib.rs
